# autoconf-template

./: README.md  bootstrap.sh  configure  configure.ac
src/: Makefile.am  curl.c  curl.h  curl.lo  example.c
